2008-06-20  Don Porter  <dgp@users.sourceforge.net>

	* tests/binary.test:	Corrected flawed tests revealed by a -debug 1
	* tests/io.test:	-singleproc 1 test suite run.

2008-06-18  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclParseExpr.c:	Disabled attempts to support [expr]
	functions named eq(...) or ne(...).  Any attempts to use such
	functions were panicking.  [Bug 1971879].

2008-06-16  Andreas Kupries  <andreask@activestate.com>

	* generic/tclCmdIL.c (InfoFrameCmd): Backport of fix made on the
	* tests/info.test: head branch :: Moved the code looking up the
	information for key 'proc' out of the TCL_LOCATION_BC branch to
	after the switch, this is common to all frame types. Updated the
	testsuite to match. This was exposed by the 2008-06-08 commit
	(Miguel), switching uplevel from direct eval to compilation. Fixes
	[Bug 1987851].

2008-06-12  Andreas Kupries  <andreask@activestate.com>

	* generic/tclCmdIL.c (InfoFrameCmd): TIP #280 conditional
	  feature. Added checks to validate HashEntry and HashTable
	  information gotten from Command structures. This seems to be
	  needed to handle structures managed by Itcl.

2008-06-12  Daniel Steffen  <das@users.sourceforge.net>

	* unix/Makefile.in:		add complete deps on tclDTrace.h.

	* unix/Makefile.in:		clean generated tclDTrace.h file.
	* unix/configure.in (SunOS): 	fix static DTrace-enabled build.

	* unix/tcl.m4 (SunOS-5.11): fix 64bit amd64 support with gcc & Sun cc.
	* unix/configure: autoconf-2.13

2008-05-26  Jeff Hobbs  <jeffh@ActiveState.com>

	* tests/io.test (io-53.9): need to close chan before removing file.

2008-05-23  Andreas Kupries  <andreask@activestate.com>

	* win/tclWinChan.c (FileWideSeekProc): Accepted a patch by
	  Alexandre Ferrieux <ferrieux@users.sourceforge.net> to fix the
	  [Bug 1965787]. 'tell' now works for locations > 2 GB as well
	  instead of going negative.

	* generic/tclIO.c (Tcl_SetChannelBufferSize): Accepted a patch by